[gd_scene load_steps=2 format=3 uid="uid://86syd1gxc5vg"]

[ext_resource type="Script" path="res://script/button_with_label.gd" id="1_al71o"]

[node name="ButtonWithLabel" type="TextureButton"]
offset_left = 2.0
offset_right = 2.0
script = ExtResource("1_al71o")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
